class Sheep {
    constructor(farmId, officialId, bornDate, gender, race, mother, father) {
        this.farmId = farmId
        this.officialId = officialId
        this.bornDate = bornDate
        this.gender = gender
        this.race = race
        this.mother = mother
        this.father = father
    }
}
//addedBy ??
module.exports = Sheep