class Task {
    constructor(header, text, forWhom, whoDidIt, timeTodo, timeDone, Status) {
        this.header = header
        this.text = text
        this.forWhom = forWhom
        this.whoDidIt = whoDidIt
        this.timeTodo = timeTodo
        this.timeDone = timeDone
        this.Status = Status
    }

}
//addedBy ??
module.exports = Task