@startuml "Class Diagram"

class Farm <<Entity>> {
    + name: String
    + Address: String
    + Phone: String
    + Users: [user]
    + Tasks: [task]
    + Sheeps: [sheep]
    + addUserToFarm(): User
    + addSheepToFarm(): Sheep
    + addTaskToFarm(): Task
}

class User <<Entity>> {
    + name: String
    + email: String
    + password: String
    + role: Role
    + farm: Farm
}

class Sheep <<Entity>> {
    + farmId: String
    + official: String
    + bornDate: Date
    + gender: Bool
    + race: Race
    + mother: Sheep
    + father: Sheep
}

class Task <<Entity>> {
    + header: String
    + text: String
    + forWhom: [User]
    + whoDidIt: [User]
    + timeTodo: Date
    + timeDone: Date
    + Status: [Status]
}

enum Role {
    MANAGER
    EMPLOYEE
}

enum Race {
    MERINOS
    SAKIZ
    KIVIRCIK
}

enum Status {
    ACTIVE
    PASSIVE
    COMPLETED
    CANCELED
}

Farm "1" --> "1..n" User
Farm "1" --> "1..n" Sheep
User --> "1" Role
Sheep --> "1" Race
Task --> "1" Status
Farm "1" --> "1..n" Task

@enduml